changed the color of the site banner

--- a/site.css
+++ b/site.css
@@ -15,7 +15,7 @@
   justify-content: center;
   flex-wrap: wrap;
   position: relative;
-  background-color: lightgreen;
+  background-color: lightblue;
   overflow:hidden;
 }
 
