--- a/site.css
+++ b/site.css
@@ -51,3 +51,27 @@ iframe {
   margin: auto;
   border-style: none;
 }
+
+.contact {
+  display: block;
+  margin:auto;
+  text-align: center;
+}
+
+share-buttons img {
+width: 35px;
+padding: 5px;
+border: 0;
+box-shadow: 0;
+display: inline;
+}
+.share-buttons {
+  text-align: center;
+}
+
+.share-buttons a {
+ display: inline-block;
+ padding: 1em;
+ margin: 1em;
+ border: 1px solid black;
+}
