--- a/site.css
+++ b/site.css
@@ -53,30 +53,20 @@ iframe {
 }
 
 .contact {
-<<<<<<< HEAD
   display: block;
   margin:auto;
   text-align: center;
 }
 
-share-buttons img {
-width: 35px;
-padding: 5px;
-border: 0;
-box-shadow: 0;
-display: inline;
-}
-.share-buttons {
-  text-align: center;
+
+
+.button {
+  float: left;
 }
 
-.share-buttons a {
- display: inline-block;
- padding: 1em;
- margin: 1em;
- border: 1px solid black;
+.share-buttons {
+  height: 65px;
+  width: 385px;
+  margin: 0 auto;
+  position:relative;
 }
-=======
-  text-align: center;
-}
->>>>>>> 80d26669b54becb2f3ce7d5f87557f29b92c2b70
