--- a/site.css
+++ b/site.css
@@ -58,7 +58,14 @@ iframe {
   text-align: center;
 }
 
+p {
+  margin-left: 20px;
+  font-size: 20px;
+}
 
+h2 {
+  margin-left: 20px;
+}
 
 .button {
   float: left;
