--- a/site.css
+++ b/site.css
@@ -4,7 +4,7 @@
 }
 
 .topbanner {
-  background: url("https://media-exp1.licdn.com/dms/image/C5616AQEjpfvwyKZptw/profile-displaybackgroundimage-shrink_200_800/0?e=1599091200&v=beta&t=1RaLFhs61Op-WdyXsXYopq0KMlctWYBD2NeyjuI9E78") no-repeat center;
+  background: url("uobackground.jpg") no-repeat center;
   background-size: cover;
 }
 
