--- a/style.css
+++ b/style.css
@@ -78,7 +78,6 @@ img {
 .element_contact > a {
 	color: white;
 	text-decoration: none;
-	font-size:2vw;
 }
 
 .element_contact > a:hover {
@@ -97,7 +96,6 @@ img {
 	text-decoration: none;
 	border-radius: 1vh;
 	border: 1px;
-	font-size:2vw;
 }
 
 .element_nav a:hover {
@@ -212,7 +210,6 @@ img {
 .wrapper_projects {
 	background-color: rgba(0, 0, 0, 0.2);
 	width: 90%;
-	height: 40%;
 	margin-top: 5vh;
 	font-size: 2vh;
 }
@@ -253,7 +250,7 @@ img {
 }
 
 .img_profilepic {
-	width: 25vw;
+	height: 60vh;
 	margin-left: 5vw;
 }
 
@@ -265,6 +262,38 @@ img {
 	vertical-align: top;
 }
 
+/*Content: Blog*/
+.wrapper_blogtext {
+	margin-left: 10vw;
+	margin-right: 10vw;
+}
+
+.wrapper_blog {
+	margin-left: 10vw;
+	display: flex;
+}
+
+#container_blog {
+	width: 50vw;
+}
+
+#iframe_blog_display {
+	width: 50vw;
+	height: 75vh;
+}
+
+#container_blognav {
+	width: 25vw;
+	text-align: center;
+	background-color: darkgrey;
+	border-radius: 5px;
+	margin-left: 1vw;
+}
+
+#container_blognav > button {
+	margin-top: 3vh;
+}
+
 /*Content: Data*/
 .wrapper_analysistext {
 	margin-left: 15vw;
@@ -273,7 +302,6 @@ img {
 
 .wrapper_datavisual1 {
 	float: left;
-	margin-bottom: 2vh;
 	margin-right: 2vw;
 }
 
